tests/cpp/internal/negative_case/bad_using_alias_before_declaration.cpp
// Negative test: an alias name should not be usable before its using
// declaration appears.
int main() {
  Alias value = 0;
  return value;
}

using Alias = int;
